--- a/public/style.css
+++ b/public/style.css
@@ -9,11 +9,16 @@
 }
 
 main {
-    padding-top: 80px;
+    padding-top: 50px;
 }
 
 .main-content {
+    margin-top: 20px;
     margin-bottom: 170px;
+}
+
+.table-responsive {
+    margin-top: 20px;
 }
 
 .links a{
@@ -22,16 +27,10 @@ main {
     margin-left: 10px;
 }
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
 .img-container{
     text-align: center;
     padding: 30px;
 }
-
 
 /* Estilos do header */
 header {
@@ -56,12 +55,15 @@ header {
 
 h1 {
     color: #318CE7;
-    font-weight: bold;
     margin: 0;
 }
 
 .h1-title {
     font-size: 34px;
+}
+
+.h1-title a, .h1-title a:hover, .h1-title a:active {
+    text-decoration: none;
 }
 
 .menu-toggle { 
@@ -165,7 +167,7 @@ footer {
 }
 
 .footer-content {
-    padding: 15px 0;
+    padding: 5px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -195,7 +197,7 @@ footer {
 }
 
 .footer-content p {
-    margin-top: 10px;
+    margin-top: 5px;
     text-align: center;
     width: 100%;
 }
